force-app/main/default/objects/JobDescription__c/JobDescription__c.object-meta.xml
<CustomObject>
    <label>Job Description</label>
    <nameField>
        <label>Job Description Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Description</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>