force-app/main/default/objects/JobDescription__c/fields/JobDetail__c.field-meta.xml
<CustomField>
    <fullName>JobDetail__c</fullName>
    <label>Job Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>