force-app/main/default/objects/JobDescription__c/fields/JobRequirement__c.field-meta.xml
<CustomField>
    <fullName>JobRequirement__c</fullName>
    <label>Job Requirement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>