force-app/main/default/objects/JobDescription__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Job Description</relationshipLabel>
    <relationshipName>Job_Description</relationshipName>
    <type>Lookup</type>
</CustomField>