force-app/main/default/objects/JobDescription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>JobDetail__c</columns>
    <columns>JobRequirement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>